# Team_Fulton_Qt_Factory

./: README.md  docker-compose.yml
Qt_client/: CMakeLists.txt  Main.qml  main.cpp  mqttmanager.cpp  mqttmanager.h
mqtt-broker/: mosquitto.conf
mqtt-broker/data/: mosquitto.db
sensor/: Dockerfile  main.py  test.py
